<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
		android:checkableBehavior="single">
		<item
			android:id="@id/home_id"
			android:title="@string/home_title"
			android:icon="@drawable/home"/>
		<item
			android:id="@id/syllabus_id"
			android:title="@string/syllabus_title"
			android:icon="@drawable/syllabus"/>
		<item
			android:id="@id/answer_keys_id"
			android:title="@string/answer_keys_title"
			android:icon="@drawable/key"/>
		<item
			android:id="@id/latest_jobs_id"
			android:title="@string/latest_jobs_title"
			android:icon="@drawable/job"/>
		<item
			android:id="@id/admit_card_id"
			android:title="@string/admit_card_title"
			android:icon="@drawable/admitcard"/>
		<item
			android:id="@id/results_id"
			android:title="@string/results_title"
			android:icon="@drawable/result"/>
		<item
			android:id="@+id/more"
			android:checkable="true"
			android:icon="@drawable/expand_more"
			android:title="More"/>
		<group
			android:id="@+id/moreGroup"
			android:visible="false"
			android:checkableBehavior="single">
			<item
				android:id="@id/upsssc_id"
				android:title="@string/upsssc_title"/>
			<item
				android:id="@id/ibps_id"
				android:title="@string/ibps_title"/>
			<item
				android:id="@id/ssc_id"
				android:title="@string/ssc_title"/>
			<item
				android:id="@id/upsc_id"
				android:title="@string/upsc_title"/>
			<item
				android:id="@id/railway_id"
				android:title="@string/railway_title"/>
			<item
				android:id="@id/uppsc_id"
				android:title="@string/uppsc_title"/>
			<item
				android:id="@id/tet_id"
				android:title="@string/tet_title"/>
			<item
				android:id="@id/all_board_exam_id"
				android:title="@string/all_board_exam_title"/>
			<item
				android:id="@id/police_vacancy_id"
				android:title="@string/police_vacancy_title"/>
		</group>
	</group>
	<item android:title="Follow us on">
		<menu>
			<item
				android:id="@+id/facebook"
				android:title="Facebook"
				android:icon="@drawable/facebook"
			/>
			<item
				android:id="@+id/twitter"
				android:title="Twitter"
				android:icon="@drawable/twitter"
			/>
		</menu>
	</item>
</menu>
